--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <a href="https://peachwild90.github.io/Galaxy-Guitars/">
-                    <img class="d-block w-100" src="assets/img/JEM1.jpg" alt="First Slide">
+                    <img class="d-block w-100" src="assets/img/storefront.png" alt="First Slide">
                   </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Galaxy-Guitars</h5>
@@ -57,21 +57,27 @@
                     </div>
                   </div>
                   <div class="carousel-item">
+                    <a href="https://github.com/PeachWild90/Gold-Badge-Challenges">
                     <img class="d-block w-100" src="assets/img/consoleapp1.png" alt="Second slide">
+                  </a>
                     <div class="carousel-caption carousel-caption-cons d-none d-md-block">
                       <h5>Console Apps</h5>
                       <p>Written in C#. Fundamentals of backend development and logic</p>
                     </div>
                   </div>
                   <div class="carousel-item">
+                    <a href="https://codepen.io/taco20/pen/ePobJW">
                     <img class="d-block w-100" src="assets/img/C'thun.png" alt="Third slide">
+                    </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>C'thun</h5>
                       <p>Creature made from Codepin (html/css) </p>
                     </div>
                   </div>
                   <div class="carousel-item">
+                    <a href="http://indianabrace.com/">
                     <img class="d-block w-100" src="assets/img/X1Blade7485.jpg" alt="Third slide">
+                  </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Indiana Brace Company</h5>
                       <p>Web application built in ASP.NET</p>
@@ -172,7 +178,7 @@
                         Send Message
                       </button>
                     </div>
-                    <img class="d-block w-100" src="assets/img/neko1.jpg" alt="Neko" id="neko">
+                    <img class="d-block w-100" src="assets/img/Neko2.JPG" alt="Neko" id="neko">
                   </form>
                 </div>
               </div>
