--- a/index.html
+++ b/index.html
@@ -2,28 +2,19 @@
 <html lang="en">
 
 <head>
+  <title>Wylie Peach</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Bai+Jamjuree|Orbitron|Roboto+Condensed|Yrsa" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-
-
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-
-
 </head>
 <!----navbar-->
-
 <body>
-
-
-
   <!--Header-->
   <div class="jumbotron jumbotron-fluid" id="jumbotron-fluid">
     <div id="gradient" />
@@ -191,10 +182,6 @@
       </div>
 
       <!-- button that links to resume -->
-
-     
-
-
       <h1 class="display-4">Wylie Peach</h1>
       <p class="lead" id="lead1">Developer, Engineer, Musician</p>
 
@@ -211,9 +198,6 @@
     </div>
   </div>
 
-
-
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -221,7 +205,5 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script src="./js/main.jss"></script>
-
 </body>
-
 </html>
