--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <a href="http://indianabrace.com/">
+                    <a href="https://indianabracecompany.azurewebsites.net/">
                     <img class="d-block w-100" src="assets/img/X1Blade7485.jpg" alt="Third slide">
                   </a>
                     <div class="carousel-caption d-none d-md-block">
