--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div id="container">
         <div id="cont">
           <div class="footer_center">
-            <h3> <a href="https://docs.google.com/document/d/e/2PACX-1vTVg9JRb36Ls01Lj1vfb2FrgSqnhzrn1jvHE0MJNkede9ATnN0HkQWO1c8UTKofffm6j-wxqecMf-sU/pub" class="button1">Resume</a> | .NET Oct 2018 | </h3>
+            <h3> <a href="https://docs.google.com/document/d/e/2PACX-1vTVg9JRb36Ls01Lj1vfb2FrgSqnhzrn1jvHE0MJNkede9ATnN0HkQWO1c8UTKofffm6j-wxqecMf-sU/pub" class="button1">Resume</a> | <a href="https://www.linkedin.com/in/wylie-peach-7351a8174/" class="button1">LinkedIn</a> |<a href="https://github.com/PeachWild90" class= "button1">Github</a> </h3>
           </div>
         </div>
       </div>
