--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     </div>
     <div class="footer">
-      <div id="button"></div>
+      <div id="button" class="arrow up"></div>
       <div id="container">
         <div id="cont">
           <div class="footer_center">
