--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!--Header-->
   <div class="jumbotron jumbotron-fluid" id="jumbotron-fluid">
     <div id="gradient" />
-    <div class="container">
+    <div class="container" id="jumboContainer">
 
       <button type="button" class="btn btn-outline-secondary" id="projectButton" data-toggle="modal" data-target="#projectModal">
         Projects
